src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>B2B_VIP_Customer__c</fullName>
        <formula>IF( LG_VIP__c ,  IMAGE($Label.B2B_VIP_Customer_Image_URL , &quot;VIP&quot;, 30,100) , NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VIP Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_Bankruptcy_Date__c</fullName>
        <label>Bankruptcy Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>B2B_Bankruptcy_Warning__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bankruptcy flag for an account.</description>
        <label>Bankruptcy Warning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cable_master_ID__c</fullName>
        <externalId>true</externalId>
        <label>Cable master ID</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Allow_Billing_Updates__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Ability to change this either during account creation or post account creation by an agent.</description>
        <label>Allow Billing Updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_ID__c</fullName>
        <displayFormat>CO{000000000}</displayFormat>
        <label>Company ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Duns_ID__c</fullName>
        <label>Duns ID</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Infonova__c</fullName>
        <externalId>true</externalId>
        <label>Infonova_ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_AccountBackendSource__c</fullName>
        <label>Account Backend Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DERBY</fullName>
                </value>
                <value>
                    <fullName>DYNAMICS</fullName>
                </value>
                <value>
                    <fullName>TAIFUN</fullName>
                </value>
                <value>
                    <fullName>EBS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_AccountLeadStatus__c</fullName>
        <label>Lead Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Contacted</fullName>
                </value>
                <value>
                    <fullName>Contacted - Follow up</fullName>
                </value>
                <value>
                    <fullName>Contacted - Future interest</fullName>
                </value>
                <value>
                    <fullName>Qualified</fullName>
                </value>
                <value>
                    <fullName>Disqualified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_AccountNumber__c</fullName>
        <displayFormat>81{00000000}</displayFormat>
        <label>Account Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>LG_AccountReasonDisqualified__c</fullName>
        <label>Reason Disqualified</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LG_AccountLeadStatus__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Inaccurate email</fullName>
                </value>
                <value>
                    <fullName>Inaccurate phone #</fullName>
                </value>
                <value>
                    <fullName>Moving Out of Footprint</fullName>
                </value>
                <value>
                    <fullName>No credit</fullName>
                </value>
                <value>
                    <fullName>Off-Net</fullName>
                </value>
                <value>
                    <fullName>Out of Business</fullName>
                </value>
                <value>
                    <fullName>Product doesn&apos;t match needs of customer</fullName>
                </value>
                <value>
                    <fullName>Loyal to current vendor</fullName>
                </value>
                <value>
                    <fullName>Switching is to much hassle</fullName>
                </value>
                <value>
                    <fullName>Price is not attractive enough</fullName>
                </value>
                <value>
                    <fullName>Not satisfied with quality UPC/Ziggo</fullName>
                </value>
                <value>
                    <fullName>Afraid to change vendor</fullName>
                </value>
                <value>
                    <fullName>Does not appreciate telemarketing/d2d sales</fullName>
                </value>
                <value>
                    <fullName>Decision made at primary office</fullName>
                </value>
                <value>
                    <fullName>Stuck in existing contract</fullName>
                </value>
                <value>
                    <fullName>Bad experience with Ziggo in retail market</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_AddressSearchText__c</fullName>
        <description>Contains ZIP + House Number + House Number Suffix so that it can be searched on more easily</description>
        <label>Address Search Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AddressValidated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This feld is marks the lead for a valid address</description>
        <label>Address Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_BankAccountHolder__c</fullName>
        <label>Bank Account Holder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_BankAccountNumberIBAN__c</fullName>
        <label>Bank Account Number (IBAN)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_BillingEmailAddress__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LG_ChamberOfCommerceNumber__c</fullName>
        <description>KvK No.</description>
        <label>National ID number</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LG_ChamberofCommerceInformation__c</fullName>
        <formula>HYPERLINK(&quot;http://www.kvk.nl/orderstraat/bedrijf-kiezen/?q=&quot; &amp; LG_ChamberOfCommerceNumber__c , &quot;Chamber of Commerce Information&quot;,&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chamber of Commerce Information</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_CheckServiceAvailability__c</fullName>
        <formula>HYPERLINK(&quot;/partner/apex/LG_ServiceAvailabilitySF1?postalCode=&quot; + LG_VisitPostalCode__c + &quot;&amp;houseNumber=&quot; + LG_VisitHouseNumber__c + &quot;&amp;houseNumberExtension=&quot; + LG_VisitHouseNumberExtension__c,IMAGE (&quot;/partner/servlet/servlet.FileDownload?file=&quot; + $Setup.LG_EnvironmentVariables__c.LG_ServiceAvailabilityIconID__c, &quot;Check Now&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Check Service-Availability</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_CommerciallyActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Account is Commercially Active</description>
        <label>Commercially Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_CompetitorContractEndDate__c</fullName>
        <label>Competitor Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_CompetitorName__c</fullName>
        <label>Competitor Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Andere</fullName>
                </value>
                <value>
                    <fullName>1&amp;1</fullName>
                </value>
                <value>
                    <fullName>Telekom</fullName>
                </value>
                <value>
                    <fullName>Vodafone</fullName>
                </value>
                <value>
                    <fullName>O2</fullName>
                </value>
                <value>
                    <fullName>Tele2</fullName>
                </value>
                <value>
                    <fullName>Kabel Deutschland</fullName>
                </value>
                <value>
                    <fullName>Tele Columbus</fullName>
                </value>
                <value>
                    <fullName>EWE Tel</fullName>
                </value>
                <value>
                    <fullName>Net Cologne</fullName>
                </value>
                <value>
                    <fullName>M-net</fullName>
                </value>
                <value>
                    <fullName>swb</fullName>
                </value>
                <value>
                    <fullName>Versatel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_CompetitorProduct__c</fullName>
        <label>Competitor Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internet</fullName>
                </value>
                <value>
                    <fullName>Internet+TV</fullName>
                </value>
                <value>
                    <fullName>Telephony</fullName>
                </value>
                <value>
                    <fullName>Telephony+Internet</fullName>
                </value>
                <value>
                    <fullName>Telephony+Internet+TV</fullName>
                </value>
                <value>
                    <fullName>Telephony+TV</fullName>
                </value>
                <value>
                    <fullName>TV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_ContractualOrganization__c</fullName>
        <label>Contractual Organization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LG_ContractualOrganization</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_CreditRisk__c</fullName>
        <label>Credit Risk</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_CustomAccountNumber__c</fullName>
        <displayFormat>A-{0000000000}</displayFormat>
        <label>Custom Account Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>LG_DateOfEstablishment__c</fullName>
        <label>Date of Establishment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_DeliveryMethod__c</fullName>
        <label>Delivery Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                    <default>true</default>
                    <label>Email</label>
                </value>
                <value>
                    <fullName>Post</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_DetailedIndustry__c</fullName>
        <label>Detailed Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_EconomicallyActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Account is Economically Active</description>
        <label>Economically Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LG_Footprint__c</fullName>
        <description>Defining Footprint to which a Lead/Company/Account belongs</description>
        <label>Footprint</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>UPC</fullName>
                </value>
                <value>
                    <fullName>Ziggo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_Huawei_Tenant_ID__c</fullName>
        <description>Created as part of BDS story SFOM-2202</description>
        <label>Huawei Tenant ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Industry__c</fullName>
        <label>Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_InstalledBaseSummary__c</fullName>
        <formula>IF(LG_InternetCustomer__c || LG_MobileCustomer__c || LG_TelephonyCustomer__c || LG_InternetCustomer__c ,RPAD(IF(LG_InternetCustomer__c,&apos;Internet, &apos;,&apos;&apos;) &amp; IF(LG_TVCustomer__c,&apos;TV, &apos;,&apos;&apos;) &amp; IF(LG_TelephonyCustomer__c,&apos;Telephone, &apos;,&apos;&apos;) &amp; IF(LG_MobileCustomer__c,&apos;Mobile , &apos;,&apos;&apos;),LEN(IF(LG_InternetCustomer__c,&apos;Internet, &apos;,&apos;&apos;) &amp; IF(LG_TVCustomer__c,&apos;TV, &apos;,&apos;&apos;) &amp; IF(LG_TelephonyCustomer__c,&apos;Telephone, &apos;,&apos;&apos;) &amp; IF(LG_MobileCustomer__c,&apos;Mobile, &apos;,&apos;&apos;))-2), &apos;None&apos;)</formula>
        <label>Installed Base Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Interest__c</fullName>
        <label>Interest in...</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>Service that Ziggo cannot offer yet</fullName>
                </value>
                <value>
                    <fullName>Internet or Internet + phone</fullName>
                </value>
                <value>
                    <fullName>Self-Manage Order</fullName>
                </value>
                <value>
                    <fullName>Products but No Cable</fullName>
                </value>
                <value>
                    <fullName>Product but Stuck in existing contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_InternetCustomer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Internet Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_LegalEntityType__c</fullName>
        <label>Legal Entity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LG_LegalEntityType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_LegalForm__c</fullName>
        <label>Legal Form</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_MobileCompetitorContractEndDate__c</fullName>
        <label>Mobile Competitor Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_MobileCompetitorName__c</fullName>
        <label>Mobile Competitor Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Andere</fullName>
                </value>
                <value>
                    <fullName>Telekom</fullName>
                </value>
                <value>
                    <fullName>Vodafone</fullName>
                </value>
                <value>
                    <fullName>O2</fullName>
                </value>
                <value>
                    <fullName>E-Plus</fullName>
                </value>
                <value>
                    <fullName>Mobilcom Debitel</fullName>
                </value>
                <value>
                    <fullName>1&amp;1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_MobileCustomer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_MyBill_Access__c</fullName>
        <description>This field is used to store my bill access details</description>
        <label>MyBill Access</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_MyBill_Email__c</fullName>
        <description>MyBill Access Email id</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LG_MyBill_FirstName__c</fullName>
        <description>My Bill portal First Name</description>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_MyBill_LastName__c</fullName>
        <description>MyBill portal last name</description>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_NEWSalesChannel__c</fullName>
        <formula>TEXT(Owner.LG_SalesChannel__c)</formula>
        <label>Sales Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_NumberOfDesktops__c</fullName>
        <label>Number of Desktops</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_NumberOfLaptops__c</fullName>
        <label>Number of Laptops</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_OpenCloudSenseAnywhere__c</fullName>
        <description>Opens the same Account record in the CloudSense Anywhere app.</description>
        <formula>HYPERLINK(&quot;cloudsenseanywhere://entity/viewDetails?id=&quot; +Id, IMAGE (&quot;/partner/servlet/servlet.FileDownload?file=&quot; + $Setup.LG_EnvironmentVariables__c.LG_CloudSenceAnywhereIconID__c,&quot;Open CSA&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open CloudSense Anywhere</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PaymentType__c</fullName>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Self-payer</fullName>
                    <default>true</default>
                    <label>Self-payer</label>
                </value>
                <value>
                    <fullName>Direct Debit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_PostalAddress__c</fullName>
        <formula>LG_PostalStreet__c + &quot; &quot; + LG_PostalHouseNumber__c + &quot; &quot; + LG_PostalHouseNumberExtension__c + &quot;, &quot; + LG_PostalPostalCode__c + &quot;, &quot; + LG_PostalCity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Postal Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PostalCity__c</fullName>
        <description>Postal City</description>
        <label>Postal City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PostalCountry__c</fullName>
        <label>Postal Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Aland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia, Plurinational State of</fullName>
                </value>
                <value>
                    <fullName>Bonaire, Sint Eustatius and Saba</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_PostalHouseNumberExtension__c</fullName>
        <label>Postal House Number Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PostalHouseNumber__c</fullName>
        <label>Postal House Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PostalPostalCode__c</fullName>
        <label>Postal Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PostalStreet__c</fullName>
        <label>Postal Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PrimaryLocation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_ReadyForService__c</fullName>
        <description>defining if Account is Ready for Service</description>
        <label>Ready for Service</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Near-Net</fullName>
                </value>
                <value>
                    <fullName>Off-Net</fullName>
                </value>
                <value>
                    <fullName>On-Net</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_ReasonForRegistration__c</fullName>
        <label>Reason for Registration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Segment__c</fullName>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SoHo</fullName>
                </value>
                <value>
                    <fullName>SME</fullName>
                </value>
                <value>
                    <fullName>LE</fullName>
                </value>
                <value>
                    <fullName>Wholesale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_SpecificInterest__c</fullName>
        <label>Specific Interest</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LG_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_TVCustomer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DTV Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_TelephonyCustomer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Telephony Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_VATNumber__c</fullName>
        <description>VAT Number</description>
        <label>VAT Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_VIPReason__c</fullName>
        <label>VIP Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LG_VIP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_VisitAddressID__c</fullName>
        <description>US SFDT-16 - This field contains the address ID for the address coming from Peal Integration</description>
        <label>Visit Address ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_VisitAddress__c</fullName>
        <description>Visit Address field concatenated for use in Salesforce1 to save screen space</description>
        <formula>LG_VisitStreet__c + &quot; &quot; + LG_VisitHouseNumber__c + &quot; &quot; + LG_VisitHouseNumberExtension__c + &quot;, &quot; + LG_VisitPostalCode__c + &quot;, &quot; + LG_VisitCity__c</formula>
        <label>Visit Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_VisitCity__c</fullName>
        <label>Visit City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_VisitCountry__c</fullName>
        <label>Visit Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Aland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia, Plurinational State of</fullName>
                </value>
                <value>
                    <fullName>Bonaire, Sint Eustatius and Saba</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_VisitHouseNumberExtension__c</fullName>
        <label>Visit House Number Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_VisitHouseNumber__c</fullName>
        <label>Visit House Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_VisitPostalCode__c</fullName>
        <label>Visit Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_VisitStreet__c</fullName>
        <label>Visit Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1</booleanFilter>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <infoMessage>Please select the partner</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priced_Quote_Valid_for_Days__c</fullName>
        <label>Quote Validity Period (Days)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team_ID__c</fullName>
        <label>Team ID</label>
        <length>5</length>
        <type>Text</type>
    </fields>
</CustomObject>